<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Asteroids</string>
    <string name="tituloApp">Asteroids</string>
    <string name="jugar">Jugar</string>
    <string name="opciones">Opciones</string>
    <string name="ayuda">Ayuda</string>
    <string name="puntuaciones">Ranking</string>
    <string name="otro_texto">Otro texto</string>
    <string name="menu_principal">Menu principal</string>
    <string name="guardar_puntuacion">Guardar puntuacion</string>
    <string name="volver">volver</string>
    <string name="todo">TODO</string>
    <string name="mejores_puntuaciones">Mejores puntuaciones</string>
</resources>