<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloApp"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="iniciarJuego"
        android:text="@string/jugar" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/options"
        android:text="@string/opciones"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/help"
        android:text="@string/ayuda"
        />

    <Button
        android:id="@+id/ranking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="listaMejoresPuntuaciones"
        android:text="@string/puntuaciones" />

</LinearLayout>